# memoco-course-project

./: .gitignore  README.md  TODO.txt  idee.txt
letteratura/tsp_solve-1.3.6/: CHANGES  INSTALL  Makefile.in  Makefile.ngn  NOTES  ONETREEDME  PARALLEL  README  TODO  TSPS_SOLVED  addition.cc  addition.h  assign.cc  assign.h  assignql.cc  assignql.h  bgrun  binfile.cc  binfile.h  challoc.c  challoc.h  chlib.c  chlib.h  chnew.cc  chnew.h  choice.cc  choice.h  choice0.cc  circlist.cc  circlist.h  config.h.in  configure  configure.in  disperse.cc  disperse.h  easytour.cc  easytour.h  findtour.cc  findtour.h  flexmap.cc  (+63 more)
letteratura/tsp_solve-1.3.6/config/: README  acconfig.h  borland.h  config.h.top  makefile
perforatore/: CPLEXsolver.cpp  CPLEXsolver.h  Ist_JSON.txt  Ist_JSON280.txt  Ist_MatriceDistanze.txt  Makefile  Miosolver.cpp  Miosolver.h  Nearsolver.cpp  Nearsolver.h  TODO.txt  TabuSearchSolver.cpp  TabuSearchSolver.h  TwoOptMove.cpp  TwoOptMove.h  TwoOptSolver.cpp  TwoOptSolver.h  cpxmacro.h  istanza.cpp  istanza.h  perforatore.cpp  punto.cpp  punto.h  risultati.ods  risultati.txt  segmento.cpp  segmento.h  soluzione.cpp  soluzione.h  solver.cpp  solver.h
perforatore/util/: Ist_JSON300.txt  Ist_JSON50.txt  Ist_JSON8000.txt  Ist_JSON9000.txt  Ist_rand10.txt  Ist_rand100.txt  Ist_rand1000.txt  Ist_rand10000.txt  Ist_rand20.txt  Ist_rand25.txt  Ist_rand30.txt  Ist_rand50.txt  Ist_rand500.txt  Ist_rand57.txt  Ist_rand6000.txt  Ist_rand70.txt  Ist_rand700.txt  Ist_rand800.txt  Ist_rand90.txt  Makefile  crea  creaIstanze.cpp  istanza.txt  istanza280nodi.txt  istanzaG57.txt  istanzaG90.txt  istanzaGoogleSoluzione.txt  istanzaJSON_30nodi.txt  istanza_100nodi.txt  istanza_30nodi.txt  istanze  mixIstanza.cpp  punto.cpp  risultatiEccellenti.txt  solMio.txt  solNear.txt  solTwo_Opt.txt
perforatore/util/da consegnare/: Ist_rand30.txt  Ist_rand40.txt  Ist_rand50.txt  sol1000.html  solMio.txt  solMio30.html  solMioG280.html  solMioG280.txt  solNear.txt  solNearest30.html  solNearestG280.html  solTwoOpt30.html  solTwoOptG280.html  solTwo_Opt.txt
perforatore/util/disegno istanze/: DIGI.html  disegno 90.html  disegno.html  disegnoTemplateEsempio.html  istanzaGoogle280.html  istanzaMixedGoogle280.html  istanzaNearest90.html  solInteressante57.html  solInteressante57mia.html  solMia.txt  solMia200.html  solMia90.html  solNearest.txt  solNearest200.html  solNearest90.html  solTwo.txt  solTwoOpt90.html
start project/: Makefile  TODO.txt  creaIstanze.cpp  istanza50nodi.txt  perforatore.cpp  perforatore.lp  punto.cpp  punto.h
util/: Makefile  istanzaJSON_100nodi.txt  istanzaReale280nodi.txt  istanze  mixIstanza.cpp  punto.cpp  punto.h
util/disegno istanze/: disegno.html
